modules/gdscript/tests/scripts/parser/errors/Invalid_dictionary_destructuring_with_missing_closing_braces.gd
func test():
    var {foo = a, bar = b = {foo = 1, bar = 2} # Should error
